compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_constrained_ty_in_err_msg_missing_start.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const _ : .. 2 := 'c'"
---
"_"@(FileId(1), 6..7) [ConstVar(Const, No)]: range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No))
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 18..21: mismatched types
| note in file FileId(1) for 18..21: this is of type `char`
| note in file FileId(1) for 10..14: this is of type `2 .. {unknown}`
| info: `char` is not assignable into `2 .. {unknown}`
