compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_constrained_ty_mismatched_tys.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type c : 1 .. true"
---
"c"@(FileId(1), 5..6) [Type]: alias[DefId(LibraryId(0), LocalDefId(0))] of range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No))
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 9..18: mismatched types
| note in file FileId(1) for 14..18: this is of type `boolean`
| note in file FileId(1) for 9..10: this is of type `{integer}`
| error in file FileId(1) for 9..18: `{integer}` is not equivalent to `boolean`
| info: range bound types must be equivalent
