compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_constrained_ty_not_index_ty_r.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type _ : 1 .. 1.0"

---
"_"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of range of `real` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1))))
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 9..17: mismatched types
| note in file FileId(1) for 9..17: bounds are of type `real`
| error in file FileId(1) for 9..17: `real` is not an index type
| info: an index type is an integer, a `boolean`, a `char`, an enumerated type, or a range of those types
