compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_constrained_ty_outside_ty_range_signed.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "const min : int1 := -16#7F\ntype _ : min .. 16#80\n"

---
"min"@(FileId(1), 6..9) [Declared]: int1
"_"@(FileId(1), 32..33) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(1))] of range of `int1` (Unevaluated(LibraryId(0), BodyId(1)) .. Expr(Unevaluated(LibraryId(0), BodyId(2))))
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 43..48: computed value is outside the type's range
| error in file FileId(1) for 43..48: `128` is larger than the largest possible `int1`
