compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_constrained_ty_outside_ty_range_unsigned.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "const max : nat1 := 1\ntype _ : -1 .. max\n"

---
"max"@(FileId(1), 6..9) [Declared]: nat1
"_"@(FileId(1), 27..28) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(1))] of range of `nat1` (Unevaluated(LibraryId(0), BodyId(1)) .. Expr(Unevaluated(LibraryId(0), BodyId(2)), No))
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 31..33: computed value is outside the type's range
| error in file FileId(1) for 31..33: `-1` is smaller than the smallest possible `nat1`
